[test] Enhance assertions in OpenAI service circuit breaker tests